--- a/model.ipynb
+++ b/model.ipynb
@@ -34,11 +34,12 @@
     "from functools import reduce\n",
     "import pandas as pd\n",
     "\n",
+    "DATE = \"\"\n",
     "dfs = [\n",
-    "    pd.read_csv(\"data/2024-12-31/prices.csv\", parse_dates=[\"date\"]),\n",
-    "    pd.read_csv(\"data/2024-12-31/cash_rate.csv\", parse_dates=[\"date\"]), #prev\n",
-    "    pd.read_csv(\"data/2024-12-31/signals.csv\", parse_dates=[\"date\"]),\n",
-    "    pd.read_csv(\"data/2024-12-31/volumes.csv\", parse_dates=[\"date\"])\n",
+    "    pd.read_csv(f\"data/{DATE}/prices.csv\", parse_dates=[\"date\"]),\n",
+    "    pd.read_csv(f\"data/{DATE}/cash_rate.csv\", parse_dates=[\"date\"]), #prev\n",
+    "    pd.read_csv(f\"data/{DATE}/signals.csv\", parse_dates=[\"date\"]),\n",
+    "    pd.read_csv(f\"data/{DATE}/volumes.csv\", parse_dates=[\"date\"])\n",
     "    ]\n",
     "\n",
     "df = (\n",
